--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
 		]
 	},
 	"dependencies": {
-		"bootstrap": "^5.2.0-beta1",
+		"@popperjs/core": "^2.11.5",
+		"bootstrap": "^5.2.0",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
